--- a/Getaway/dynamic/richLoads/JB_Retail_23_Getaway_Dynamic_160x600_RL1_2024/stylesRL1.css
+++ b/Getaway/dynamic/richLoads/JB_Retail_23_Getaway_Dynamic_160x600_RL1_2024/stylesRL1.css
@@ -176,8 +176,8 @@ video {
 }
 
 #partner_logo_img {
-  width: 100px;
-  height: 32px;
+  width: 135px;
+  /* height: 32px; */
   object-fit: contain;
   object-position: center;
 }
